Change Layout and Header

--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -9,8 +9,11 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  color: #e4e2ff;
+  background-color: #162129;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -594,4 +597,13 @@ pre tt:after {
   html {
     font-size: 100%;
   }
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 50px;
+  padding-right: 50px;
 }
