Create projects and project card components

--- a/src/components/HomeArticle/article.module.scss
+++ b/src/components/HomeArticle/article.module.scss
@@ -19,4 +19,11 @@
   .iconContainer {
     width: 80px;
   }
+
+  &:hover {
+    border-left: 4px solid #81f59b;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background-color: #81f59b11;
+  }
 }
