Add cursor pointer on home page articles

--- a/src/components/HomeArticle/article.module.scss
+++ b/src/components/HomeArticle/article.module.scss
@@ -25,5 +25,6 @@
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     background-color: #81f59b11;
+    cursor: pointer;
   }
 }
