Add breakpoints for scss

--- a/src/pages/projects.module.scss
+++ b/src/pages/projects.module.scss
@@ -1,4 +1,5 @@
 @import "../colors";
+@import "../breakpoints.scss";
 
 .container {
   margin-top: 70px;
@@ -6,8 +7,12 @@
   .projects {
     margin-top: 100px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-column-gap: 20px;
     grid-row-gap: 12px;
+
+    @include lg {
+      grid-template-columns: 1fr 1fr;
+    }
   }
 }
