Set all articles/projects links on homepage

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -4,6 +4,8 @@
   height: 80px;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  width: 100%;
 
   .navigation {
     width: 100%;
