Fix console errors and clear console logs

--- a/src/components/HomeProjectCard/project.module.scss
+++ b/src/components/HomeProjectCard/project.module.scss
@@ -53,6 +53,10 @@
     }
     .githubUrl {
       margin-bottom: 12px;
+
+      .urlText {
+        color: $green-text;
+      }
     }
 
     .languages {
