Remove focus outline of search input

--- a/src/components/SearchBar/search.module.scss
+++ b/src/components/SearchBar/search.module.scss
@@ -12,5 +12,10 @@
     border: 0;
     color: white;
     margin-left: 10px;
+    width: 100%;
+
+    &:focus {
+      outline: none;
+    }
   }
 }
