--- a/src/components/SearchBar/search.module.scss
+++ b/src/components/SearchBar/search.module.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   border-radius: 8px;
+  border: 2px solid transparent;
 
   &:hover {
     border: 2px solid #41688355;
