--- a/src/components/BlogPost/blog_post.module.scss
+++ b/src/components/BlogPost/blog_post.module.scss
@@ -22,6 +22,7 @@
       align-items: center;
       font-size: 14px;
       margin-bottom: 30px;
+      flex-wrap: wrap;
 
       .dateText {
         margin-left: 8px;
@@ -40,10 +41,12 @@
     .tags {
       display: flex;
       align-items: center;
+      flex-wrap: wrap;
 
       .tagText {
         margin-left: 10px;
         text-decoration: underline;
+        line-height: 30px;
       }
     }
   }
