--- a/src/pages/blog/post.module.scss
+++ b/src/pages/blog/post.module.scss
@@ -1,4 +1,5 @@
 @import "../../colors.scss";
+@import "../../breakpoints.scss";
 
 hr {
   height: 2px;
@@ -8,8 +9,12 @@ hr {
 .container {
   margin-top: 80px;
   .titleText {
-    font-size: 56px;
+    font-size: 36px;
     color: $title-text;
+
+    @include md {
+      font-size: 56px;
+    }
   }
 
   .info {
@@ -18,6 +23,8 @@ hr {
     font-size: 14px;
     margin-bottom: 20px;
     color: $green-text;
+    flex-wrap: wrap;
+    line-height: 36px;
 
     .dateText {
       margin-left: 8px;
@@ -27,11 +34,14 @@ hr {
       margin-right: 8px;
       font-size: 16px;
     }
+    .readMinute {
+      margin-right: auto;
+    }
 
     .tags {
       display: flex;
       align-items: center;
-      margin-left: auto;
+      flex-wrap: wrap;
 
       .tagText {
         margin-left: 10px;
