Add line height on home page texts

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -29,6 +29,7 @@ h2 {
     margin-top: 32px;
     font-size: 18px;
     padding-bottom: 80px;
+    line-height: 32px;
 
     .underline {
       border-bottom: 2px solid #1da1f2;
