--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -6,47 +6,119 @@
   display: flex;
   height: 80px;
   align-items: center;
-  justify-content: center;
   position: fixed;
   width: 100%;
   top: 0;
+  padding-left: 6vw;
+  padding-right: 6vw;
+  @include md {
+    justify-content: center;
+  }
 
   .navigation {
-    width: 100%;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 6vw;
-    padding-right: 6vw;
-    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #0b1115;
+    height: 100%;
+    width: 70vw;
+    transform: translate3d(-100vw, 0, 0);
+    transition: all 0.5s ease;
+    flex-direction: column;
     display: flex;
 
     @include md {
+      position: relative;
       padding-left: 50px;
       padding-right: 50px;
+      width: 100%;
+      max-width: 1200px;
+      margin-left: auto;
+      margin-right: auto;
+      align-items: center;
+      flex-direction: row;
+      height: auto;
+      background-color: transparent;
+      transform: translate3d(0vw, 0, 0);
     }
 
     .links {
       color: #dbebfb;
       text-decoration: none;
-      padding: 10px;
       margin-right: 10px;
-      font-size: 17px;
+      font-size: 8vw;
       font-weight: 500;
+      padding: 20px;
+      margin-top: 15px;
+
+      @include md {
+        font-size: 17px;
+        padding: 10px;
+        margin-top: 0px;
+      }
     }
 
     .rightLinks {
       display: flex;
-      margin-left: auto;
+      flex-direction: column;
+      margin-top: auto;
+      padding-bottom: 20px;
+
+      @include md {
+        flex-direction: row;
+        margin-left: auto;
+        padding-bottom: 0px;
+      }
 
       .links_small {
         color: #dbebfb;
         text-decoration: none;
-        padding: 10px;
+        padding: 16px;
         margin-right: 10px;
-        font-size: 15px;
+        font-size: 6vw;
         font-weight: 500;
+        margin-top: 16px;
+
+        @include md {
+          font-size: 15px;
+          padding: 10px;
+          margin-top: 0px;
+        }
       }
     }
+
+    .close {
+      width: 48px;
+      height: 48px;
+      position: absolute;
+      top: 20px;
+      right: 10px;
+      padding: 10px;
+      cursor: pointer;
+
+      @include md {
+        display: none;
+      }
+    }
+  }
+
+  .headerButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @include md {
+      display: none;
+    }
+  }
+  .background {
+    z-index: -1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    background-color: transparent;
+    cursor: pointer;
   }
 }
