Fix transparent background display problem

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -120,5 +120,9 @@
     height: 100%;
     background-color: transparent;
     cursor: pointer;
+
+    @include md {
+      display: none;
+    }
   }
 }
