Set new top paddings on pages for mobile

--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -2,7 +2,10 @@
 @import "../breakpoints.scss";
 
 .container {
-  padding-top: 80px;
+  padding-top: 40px;
+  @include md {
+    padding-top: 80px;
+  }
 
   h1 {
     font-size: 48px;
