--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -1,7 +1,20 @@
 @import "../colors";
+@import "../breakpoints";
 
 .container {
-  margin-top: 80px;
+  padding-top: 40px;
+  @include md {
+    padding-top: 80px;
+  }
+
+  h1 {
+    font-size: 8vw;
+    color: $green-text;
+
+    @include md {
+      font-size: 64px;
+    }
+  }
 
   .articles {
     margin-top: 100px;
