Change header buttons to divs

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -74,7 +74,6 @@
         color: #dbebfb;
         text-decoration: none;
         padding: 16px;
-        margin-right: 10px;
         font-size: 6vw;
         font-weight: 500;
         margin-top: 16px;
@@ -83,6 +82,7 @@
           font-size: 15px;
           padding: 10px;
           margin-top: 0px;
+          margin-left: 10px;
         }
       }
     }
