--- a/src/pages/projects.module.scss
+++ b/src/pages/projects.module.scss
@@ -3,6 +3,7 @@
 
 .container {
   padding-top: 40px;
+  min-height: 70vh;
   @include md {
     padding-top: 80px;
   }
@@ -25,6 +26,12 @@
 
     @include lg {
       grid-template-columns: 1fr 1fr;
+    }
+
+    .noResultsText {
+      font-size: 24px;
+      grid-column: 1/3;
+      margin: auto;
     }
   }
 
