Change some hex colors as variables in colors.scss

--- a/src/components/Articles/articles.module.scss
+++ b/src/components/Articles/articles.module.scss
@@ -19,7 +19,7 @@
 }
 
 .articles {
-  border: 2px solid rgb(28, 44, 53);
+  border: 2px solid $dark-blue;
   border-radius: 6px;
   margin-top: 36px;
 }
