--- a/src/components/BlogPost/blog_post.module.scss
+++ b/src/components/BlogPost/blog_post.module.scss
@@ -4,7 +4,7 @@
   padding: 40px;
   display: flex;
   align-items: center;
-  border: 1px solid #20383d;
+  border: 1px solid $border-color;
   border-radius: 6px;
   margin-bottom: 30px;
   box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.5);
