--- a/src/components/HomeArticle/article.module.scss
+++ b/src/components/HomeArticle/article.module.scss
@@ -5,7 +5,7 @@
   padding-left: 0px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid rgb(28, 44, 53);
+  border-bottom: 1px solid $dark-blue;
   color: $main-text;
 
   .articleInfo {
