--- a/src/components/ContactCard/contact.module.scss
+++ b/src/components/ContactCard/contact.module.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #1c2c35;
+  background-color: $dark-blue;
   margin-bottom: 40px;
   padding-right: 20px;
   padding-left: 20px;
