--- a/src/components/ProjectCard/project.module.scss
+++ b/src/components/ProjectCard/project.module.scss
@@ -8,7 +8,7 @@ a {
 .container {
   display: flex;
   border-radius: 8px;
-  background-color: #1c2c35;
+  background-color: $dark-blue;
   margin-bottom: 10px;
   overflow: hidden;
   min-height: 260px;
@@ -30,7 +30,7 @@ a {
       padding: 8px;
       border-radius: 8px;
       color: white;
-      border: 2px solid #1c2c35;
+      border: 2px solid $dark-blue;
       font-weight: bold;
     }
 
