--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -23,14 +23,14 @@
       }
 
       .hackerContainer {
-        color: #82f9a1;
-        border-bottom: 2px solid #82f9a1;
+        color: $green-text;
+        border-bottom: 2px solid $green-text;
         padding-bottom: 2px;
 
         cursor: pointer;
 
         .hackerText {
-          color: #82f9a1;
+          color: $green-text;
           font-weight: bold;
         }
 
@@ -43,8 +43,8 @@
           white-space: pre-wrap;
           opacity: 0;
           position: absolute;
-          border: 2px solid #20383d;
-          background-color: #1c2c35;
+          border: 2px solid $border-color;
+          background-color: $dark-blue;
           color: $main-text;
           padding: 8px;
           border-radius: 8px;
@@ -67,8 +67,8 @@
 .tool {
   cursor: help;
   position: relative;
-  color: #82f9a1;
-  border-bottom: 2px solid #82f9a1;
+  color: $green-text;
+  border-bottom: 2px solid $green-text;
   padding-bottom: 2px;
 }
 
@@ -88,7 +88,7 @@
   opacity: 1;
   transform: scale(1) translateY(0);
   z-index: 100;
-  background-color: #1c2c35;
+  background-color: $dark-blue;
   width: 60vw;
 
   @include md {
@@ -100,7 +100,7 @@
 .tool::before {
   border-style: dashed;
   border-width: 1em 0.75em 0 0.75em;
-  border-color: #82f9a1 transparent transparent transparent;
+  border-color: $green-text transparent transparent transparent;
   bottom: 100%;
   content: "";
   margin-left: -0.5em;
@@ -122,7 +122,7 @@
 /*== speech bubble ==*/
 .tool::after {
   background: #000;
-  border: 2px solid #82f9a1;
+  border: 2px solid $green-text;
   bottom: 180%;
   color: #edeff0;
   content: attr(data-tip);
