--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -47,7 +47,7 @@
 
     input {
       width: 100%;
-      background-color: #19252e;
+      background-color: $dark-blue;
       padding: 6px;
       padding-left: 10px;
       display: flex;
@@ -61,7 +61,7 @@
     textarea {
       width: 100%;
       height: 200px;
-      background-color: #19252e;
+      background-color: $dark-blue;
       padding: 6px;
       padding-left: 10px;
       display: flex;
