--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -26,6 +26,7 @@
     transition: all 0.5s ease;
     flex-direction: column;
     display: flex;
+    z-index: 10;
 
     @include md {
       position: relative;
