--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -20,7 +20,7 @@
     top: 0;
     left: 0;
     background-color: #0b1115;
-    height: 100vh;
+    height: 100%;
     width: 70vw;
     transform: translate3d(-100vw, 0, 0);
     transition: all 0.5s ease;
@@ -77,7 +77,7 @@
         padding: 16px;
         font-size: 6vw;
         font-weight: 500;
-        margin-top: 16px;
+        margin-bottom: 16px;
 
         @include md {
           font-size: 15px;
