--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -14,6 +14,7 @@
   @include md {
     justify-content: center;
   }
+  z-index: 10;
 
   .navigation {
     position: fixed;
@@ -26,7 +27,6 @@
     transition: all 0.5s ease;
     flex-direction: column;
     display: flex;
-    z-index: 10;
 
     @include md {
       position: relative;
@@ -82,7 +82,7 @@
         @include md {
           font-size: 15px;
           padding: 10px;
-          margin-top: 0px;
+          margin-bottom: 0px;
           margin-left: 10px;
         }
       }
