--- a/src/components/HomeArticle/article.module.scss
+++ b/src/components/HomeArticle/article.module.scss
@@ -13,6 +13,7 @@
       font-size: 20px;
       line-height: 30px;
       font-weight: bold;
+      color: $title-text;
     }
     .info {
       font-size: 12px;
