--- a/src/components/ProjectCard/project.module.scss
+++ b/src/components/ProjectCard/project.module.scss
@@ -48,6 +48,7 @@ a {
       line-height: 30px;
       font-weight: bold;
       margin-bottom: 14px;
+      color: $title-text;
     }
     .info {
       font-size: 16px;
