--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -153,7 +153,7 @@ hr {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: calc(1.45rem - 1px);
-  background: hsla(0, 0%, 0%, 0.2);
+  background: #20383d;
   border: none;
   height: 1px;
 }
